# course-llm-langchain

./: Dockerfile  README.md  pyproject.toml
src/course_llm_langchain/: __init__.py  app.py  intro-chat-prompts.py  llama-cpp.py  memory.py
src/langchain_docs/: chatbot-quickstart.ipynb  chatbot-quickstart.py
